Correccion en la victoria

--- a/vainilla.html
+++ b/vainilla.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <form id="formulario">
-        <label for="Nombre">Ingrese un numero dentro del rango 1 a 100:</label>
+        <label for="Numero">Ingrese un numero dentro del rango 1 a 100:</label>
         <input type="number" id="Numero" name="Numero" onkeyup="ValidarNumero()">
-        <button id="button" onclick="NumCorrecto()"> Enviar </button>
+        <button id="button" type="button" onclick="NumCorrecto()">Enviar</button>
     </form>
-    <div id = "cuentaIntentos"></div>
+    <div id="cuentaIntentos"></div>
     <script src="index.Js"></script>
 </body>
 </html>
