Permitir jugar de nuevo

--- a/vainilla.html
+++ b/vainilla.html
@@ -11,6 +11,7 @@
         <input type="number" id="Numero" name="Numero" onkeyup="ValidarNumero()">
         <button id="button" type="button" onclick="NumCorrecto()">Enviar</button>
     </form>
+    <button id="button1" type="button" onclick="NumCorrecto()">Jugar de nuevo</button>
     <div id="cuentaIntentos"></div>
     <script src="index.Js"></script>
 </body>
